# nsls2api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py  uvicorn_log_config.yml
.github/workflows/: checkmarx.yml  ci.yml  codeql-analysis.yml  data-consistency-workflow.yml  docker-image.yml  docker-publish.yml  test-dev-deployment.yml  test-production-deployment.yml  test_runner.yml  wiz-cli-iac-scan.yml
deployment/systemd-units/: nsls2api.service
integration-tests/: check_all_beamlines.http  check_beamlines_differences.http  check_service_health.http  facility_api_test.http  http-client.env.json
nsls2api/: local_cli.py  main.py
nsls2api/api/: beamline_api.py  proposal_api.py
nsls2api/api/models/: beamline_model.py  facility_model.py  person_model.py  proposal_model.py  recent_proposal_model.py  stats_model.py
nsls2api/api/v1/: admin_api.py  beamline_api.py  facility_api.py  proposal_api.py  stats_api.py  user_api.py
nsls2api/cli/: admin.py  api.py  auth.py  beamline.py  facility.py  main.py  proposal.py
nsls2api/infrastructure/: config.py  mongodb_setup.py  security.py  settings.py
nsls2api/models/: __init__.py  apikeys.py  beamlines.py  cycles.py  facilities.py  pass_models.py  proposal_types.py  proposals.py
nsls2api/services/: beamline_service.py  bnlpeople_service.py  facility_service.py  helpers.py  n2sn_service.py  pass_service.py  person_service.py  proposal_service.py
nsls2api/static/assets/css/: 11.css  12.css  6.css  bnl-2021.css
nsls2api/templates/diagnostics/: diagnostics.html  user_diagnostics.html
nsls2api/templates/home/: default.html  index.html  proposals.html  proposals_search.html
nsls2api/templates/shared/: _layout.html
nsls2api/templates/shared/partials/: person_simple.html  proposals_search_results.html
nsls2api/tests/: conftest.py
nsls2api/viewmodels/: user_diag_viewmodel.py
nsls2api/viewmodels/proposals/: details_viewmodel.py  search_viewmodel.py
nsls2api/viewmodels/shared/: viewmodelbase.py
nsls2api/views/: diagnostics.py  home.py
performance-tests/: locustfile.py
scripts/: create_new_beamline.py  migrate_satellite_locations.py  test_n2snusertools_groupmembers.py
src/nsls2api/: __init__.py  _version.py  exception_handlers.py  local_cli.py  main.py  middleware.py  pytest.env  scratchpad_main.py  utils.py  version.py
src/nsls2api/api/models/: beamline_model.py  facility_model.py  person_model.py  proposal_model.py  stats_model.py
src/nsls2api/api/v1/: admin_api.py  beamline_api.py  facility_api.py  jobs_api.py  proposal_api.py  stats_api.py  ups_debug_api.py  user_api.py
src/nsls2api/cli/: __init__.py  __main__.py  admin.py  api.py  auth.py  beamline.py  cli.py  environment.py  facility.py  main.py  proposal.py  settings.py
src/nsls2api/cli/utils/: api.py  cli_helpers.py  console.py
src/nsls2api/infrastructure/: app_setup.py  config.py  container_utils.py  logging.py  mongodb_setup.py  security.py
src/nsls2api/models/: __init__.py  apikeys.py  beamlines.py  cycles.py  facilities.py  jobs.py  pass_models.py  principals.py  proposal_types.py  proposals.py  slack_models.py  universalproposal_models.py
src/nsls2api/services/: background_service.py  beamline_service.py  bnlpeople_service.py  facility_service.py  helpers.py  n2sn_service.py  pass_service.py  person_service.py  proposal_service.py  slack_service.py  sync_service.py  universalproposal_service.py
src/nsls2api/static/assets/css/: 11.css  12.css  6.css  bnl-2021.css
src/nsls2api/static/assets/jquery-finger/: gruntfile.js
src/nsls2api/static/css/: bnl-2021.css  bnl-2025.css
src/nsls2api/static/js/: htmx.js
src/nsls2api/templates/diagnostics/: proposal_diagnostics.html  user_diagnostics.html
src/nsls2api/templates/home/: default.html  index.html  proposals_search.html
src/nsls2api/templates/shared/: _layout.html
src/nsls2api/tests/: conftest.py  test_home.py
src/nsls2api/tests/api/: conftest.py  test_admin_api.py  test_beamline_api.py  test_facility_api.py  test_proposal_api.py
src/nsls2api/tests/infrastructure/: test_mongodb_setup.py
src/nsls2api/tests/services/: test_facility_service.py  test_proposal_service.py
src/nsls2api/viewmodels/diagnostics/: proposal_viewmodel.py  user_viewmodel.py
src/nsls2api/viewmodels/proposals/: details_viewmodel.py  search_viewmodel.py
src/nsls2api/viewmodels/shared/: viewmodelbase.py
src/nsls2api/views/: diagnostics.py  home.py
tests/: check_all_beamlines.http  http-client.env.json
(+8 files in other folders)
