[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "nsls2api"
dynamic = ["version","dependencies"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
  { name = "Stuart Campbell", email = "scampbell@bnl.gov" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.scripts]
nsls2api = "nsls2api.cli.cli:app"

[project.urls]
Source = "https://github.com/nsls2/nsls2api/"

[tool.hatch]
version.source = "vcs"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build]
packages = ["src/nsls2api"]
hooks.vcs.version-file = "src/nsls2api/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
	"/.github",
]

#[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
#dev = ["requirements-dev.txt"]

[tool.black]
target_version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

