[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "nsls2api"
description = "NSLS-II Facility API"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  { name = "Stuart Campbell", email = "scampbell@bnl.gov" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

dynamic = [ "dependencies", "version" ]
urls.Source = "https://github.com/nsls2/nsls2api/"
scripts.nsls2api = "nsls2api.cli.cli:app"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/nsls2api/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.gitignore",
  "/.git",
  "/.vscode",
  "/.pytest_cache",
  "/.venv",
]

#[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
#dev = ["requirements-dev.txt"]

[tool.black]
target_version = [ 'py311' ]
include = '\.pyi?$'

[tool.ruff]
target-version = "py312"

lint.extend-select = [ "I" ]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
